--- a/examples/listbox/listbox-expandable.html
+++ b/examples/listbox/listbox-expandable.html
@@ -21,7 +21,7 @@
   <h1>Expandable Dropdown Listbox Example</h1>
   <p>
     <strong>NOTE:</strong> This example page is incomplete; it is not ready for final review.
-    Development is tracked by  
+    Development is tracked by
     <a href="https://github.com/w3c/aria-practices/issues/470">issue 470.</a>
   </p>
   <p>
@@ -44,35 +44,38 @@
       <p>Choose your favorite transuranic element (actinide or transactinide).</p>
       <div class="listbox-area">
         <div class="left-area">
-          <span id="ss_elem">Transuranium elements:</span>
-          <ul id="ss_elem_list" tabindex="0" role="listbox" aria-labelledby="ss_elem">
-            <li id="ss_elem_Np" role="option">Neptunium</li>
-            <li id="ss_elem_Pu" role="option">Plutonium</li>
-            <li id="ss_elem_Am" role="option">Americium</li>
-            <li id="ss_elem_Cm" role="option">Curium</li>
-            <li id="ss_elem_Bk" role="option">Berkelium</li>
-            <li id="ss_elem_Cf" role="option">Californium</li>
-            <li id="ss_elem_Es" role="option">Einsteinium</li>
-            <li id="ss_elem_Fm" role="option">Fermium</li>
-            <li id="ss_elem_Md" role="option">Mendelevium</li>
-            <li id="ss_elem_No" role="option">Nobelium</li>
-            <li id="ss_elem_Lr" role="option">Lawrencium</li>
-            <li id="ss_elem_Rf" role="option">Rutherfordium</li>
-            <li id="ss_elem_Db" role="option">Dubnium</li>
-            <li id="ss_elem_Sg" role="option">Seaborgium</li>
-            <li id="ss_elem_Bh" role="option">Bohrium</li>
-            <li id="ss_elem_Hs" role="option">Hassium</li>
-            <li id="ss_elem_Mt" role="option">Meitnerium</li>
-            <li id="ss_elem_Ds" role="option">Darmstadtium</li>
-            <li id="ss_elem_Rg" role="option">Roentgenium</li>
-            <li id="ss_elem_Cn" role="option">Copernicium</li>
-            <li id="ss_elem_Nh" role="option">Nihonium</li>
-            <li id="ss_elem_Fl" role="option">Flerovium</li>
-            <li id="ss_elem_Mc" role="option">Moscovium</li>
-            <li id="ss_elem_Lv" role="option">Livermorium</li>
-            <li id="ss_elem_Ts" role="option">Tennessine</li>
-            <li id="ss_elem_Og" role="option">Oganesson</li>
-          </ul>
+          <span id="exp_elem">Transuranium elements:</span>
+          <div id="exp_wrapper">
+            <button aria-haspopup="listbox" id="exp_button">Neptunium</button>
+            <ul id="exp_elem_list" tabindex="0" role="listbox" aria-labelledby="exp_elem" class="hidden">
+              <li id="exp_elem_Np" role="option">Neptunium</li>
+              <li id="exp_elem_Pu" role="option">Plutonium</li>
+              <li id="exp_elem_Am" role="option">Americium</li>
+              <li id="exp_elem_Cm" role="option">Curium</li>
+              <li id="exp_elem_Bk" role="option">Berkelium</li>
+              <li id="exp_elem_Cf" role="option">Californium</li>
+              <li id="exp_elem_Es" role="option">Einsteinium</li>
+              <li id="exp_elem_Fm" role="option">Fermium</li>
+              <li id="exp_elem_Md" role="option">Mendelevium</li>
+              <li id="exp_elem_No" role="option">Nobelium</li>
+              <li id="exp_elem_Lr" role="option">Lawrencium</li>
+              <li id="exp_elem_Rf" role="option">Rutherfordium</li>
+              <li id="exp_elem_Db" role="option">Dubnium</li>
+              <li id="exp_elem_Sg" role="option">Seaborgium</li>
+              <li id="exp_elem_Bh" role="option">Bohrium</li>
+              <li id="exp_elem_Hs" role="option">Hassium</li>
+              <li id="exp_elem_Mt" role="option">Meitnerium</li>
+              <li id="exp_elem_Ds" role="option">Darmstadtium</li>
+              <li id="exp_elem_Rg" role="option">Roentgenium</li>
+              <li id="exp_elem_Cn" role="option">Copernicium</li>
+              <li id="exp_elem_Nh" role="option">Nihonium</li>
+              <li id="exp_elem_Fl" role="option">Flerovium</li>
+              <li id="exp_elem_Mc" role="option">Moscovium</li>
+              <li id="exp_elem_Lv" role="option">Livermorium</li>
+              <li id="exp_elem_Ts" role="option">Tennessine</li>
+              <li id="exp_elem_Og" role="option">Oganesson</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -101,8 +104,8 @@
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
     <p>
-      The example listboxes on this page implement the following keyboard interface. 
-      Other variations and options for the keyboard interface are described in the  
+      The example listboxes on this page implement the following keyboard interface.
+      Other variations and options for the keyboard interface are described in the
       <a href="../../#listbox_kbd_interaction">Keyboard Interaction section of the Listbox Design Pattern.</a>
     </p>
     <table aria-labelledby="kbd_label" class="def">
@@ -141,8 +144,8 @@
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
     <p>
-      The example listboxes on this page implement the following ARIA roles, states, and properties. 
-      Information about other ways of applying ARIA roles, states, and properties is available in the    
+      The example listboxes on this page implement the following ARIA roles, states, and properties.
+      Information about other ways of applying ARIA roles, states, and properties is available in the
       <a href="../../#listbox_roles_states_props">Roles, States, and Properties section of the Listbox Design Pattern.</a>
     </p>
     <table aria-labelledby="rps_label" class="data attributes">
