--- a/aria-practices.html
+++ b/aria-practices.html
@@ -173,12 +173,7 @@
 
   <section id="aria_ex">
     <h2>Design Patterns and Widgets</h2>
-    <p>This section demonstrates how to make common rich internet application widgets and patterns accessible by applying WAI-ARIA roles, states, and properties and implementing keyboard support.</p>
-    <p class="note">
-      Although users of Mac OS X are familiar with using the <kbd>Command</kbd> key instead of the <kbd>Control</kbd> key, the <kbd>Command</kbd> key is typically reserved for desktop applications and OS-level integration.
-      Until device and platform independence can be addressed in WAI-ARIA 2.0, the primary <kbd>Control</kbd> modifier key for WAI-ARIA widget interaction is specified as <kbd>Control</kbd> on all platforms, including Mac OS X.
-    </p>
-
+    <p>This section demonstrates how to make common rich internet application patterns and widgets accessible by applying WAI-ARIA roles, states, and properties and implementing keyboard support.</p>
     <section id="aria_ex_widget">
       <h3>Generally Applicable Keyboard Recommendations </h3>
       <p>The following keyboard conventions are applicable to many of the patterns described in subsequent sections.</p>
