Apple uses macOS as the name of their OS not Mac OS so changed througout the document.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3223,7 +3223,7 @@
       <h3>Fundamental Keyboard Navigation Conventions</h3>
 
       <p>
-        ARIA roles, states, and properties model accessibility behaviors and features shared among GUI components of popular desktop GUIs, including Microsoft Windows, Mac OS X, and GNOME.
+        ARIA roles, states, and properties model accessibility behaviors and features shared among GUI components of popular desktop GUIs, including Microsoft Windows, macOS, and GNOME.
         Similarly, ARIA design patterns borrow user expectations and keyboard conventions from those platforms, consistently incorporating common conventions with the aim of facilitating easy learning and efficient operation of keyboard interfaces across the web.
       </p>
 
@@ -3388,8 +3388,8 @@
       </p>
 
       <p>
-        In HTML, the default tab sequence of a web page includes only links and HTML form elements, except In Mac OS, where it includes only form elements.
-        Mac OS system preferences include a keyboard setting that enables the tab key to move focus to all focusable elements.
+        In HTML, the default tab sequence of a web page includes only links and HTML form elements, except In macOS, where it includes only form elements.
+        macOS system preferences include a keyboard setting that enables the tab key to move focus to all focusable elements.
       </p>
 
       <p>
@@ -3616,8 +3616,8 @@
       <h3>Key Assignment Conventions for Common Functions</h3>
       <p>
         The following key assignments can be used in any context where their conventionally associated functions are appropriate.
-        While the assignments associated with Windows and Linux platforms can be implemented and used in browsers running in Mac OS,
-        replacing them with Mac OS assignments in browsers running on a Mac OS device can make the keyboard interface more discoverable and intuitive for those users.
+        While the assignments associated with Windows and Linux platforms can be implemented and used in browsers running in macOS,
+        replacing them with macOS assignments in browsers running on a macOS device can make the keyboard interface more discoverable and intuitive for those users.
         In some cases, it may also help avoid system or browser keyboard conflicts.
       </p>
       <table class="widget-features">
@@ -3625,7 +3625,7 @@
           <tr>
             <th>Function</th>
             <th>Windows/Linux Key</th>
-            <th>Mac OS Key</th>
+            <th>macOS Key</th>
           </tr>
         </thead>
         <tbody>
@@ -3816,7 +3816,7 @@
             <li><kbd>Caps Lock</kbd> + any other combination of keys.</li>
             <li><kbd>Insert</kbd> + any combination of other keys.</li>
             <li><kbd>Scroll Lock</kbd> + any combination of other keys.</li>
-            <li>Mac OS only: <kbd>Control+Option</kbd> + any combination of other keys.</li>
+            <li>macOS only: <kbd>Control+Option</kbd> + any combination of other keys.</li>
           </ol>
         </section>
 
