--- a/examples/listbox/listbox-rearrangeable.html
+++ b/examples/listbox/listbox-rearrangeable.html
@@ -71,6 +71,7 @@ while in the second example, they may select multiple options before activating 
             </ul>
             <button id="ex1-add" class="move-left-btn" aria-keyshortcuts="Alt+ArrowLeft Enter" aria-disabled="true">Important</button>
           </div>
+          <div class="offscreen">Last change: <span aria-live="polite" id="ss_live_region"></span></div>
         </div>
       </div>
       <div role="separator" id="ex1_end_sep" aria-labelledby="ex1_end_sep ex1_label" aria-label="End of"></div>
@@ -136,6 +137,7 @@ while in the second example, they may select multiple options before activating 
             </ul>
             <button id="ex2-delete" class="move-left-btn" aria-keyshortcuts="Alt+ArrowLeft Delete" aria-disabled="true">Remove</button>
           </div>
+          <div class="offscreen">Last change: <span aria-live="polite" id="ms_live_region"></span></div>
         </div>
       </div>
       <div role="separator" id="ex2_end_sep" aria-labelledby="ex2_end_sep ex2_label" aria-label="End of"></div>
