initial implementation of list

--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-none.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-none.html
@@ -36,8 +36,8 @@
   </p>
   <p>Similar examples include: </p>
   <ul>
-    <li><a href="#">example name</a>: summarize what this related example demonstrates.</li>
-    <!--  list other examples that implement the same design pattern. -->
+    <li><a href="combobox-autocomplete-list.html">Combobox With Autocompete List</a>: summarize what this related example demonstrates.</li>
+    <li><a href="combobox-autocomplete-both.html">Combobox With Both List and Inline Autocompletion</a>: summarize what this related example demonstrates.</li>
   </ul>
 
   <section>
