--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
@@ -36,8 +36,8 @@
   </p>
   <p>Similar examples include: </p>
   <ul>
-    <li><a href="#">example name</a>: summarize what this related example demonstrates.</li>
-    <!--  list other examples that implement the same design pattern. -->
+    <li><a href="combobox-autocomplete-none.html">Combobox Without Autocomplete</a>: summarize what this related example demonstrates.</li>
+    <li><a href="combobox-autocomplete-list.html">Combobox With an Autocomplete List</a>: summarize what this related example demonstrates.</li>
   </ul>
 
   <section>
