Initial implementation of combobox got list and inline autocomplete

--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-inline.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-inline.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Example of Legacy ARIA 1.0 Combobox Without Autocomplete | WAI-ARIA Authoring Practices 1.1</title>
+<title>Example of Legacy ARIA 1.0 Combobox With Inline Autocomplete | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -22,7 +22,7 @@
 </head>
 <body>
   <main>
-  <h1>Example of Legacy ARIA 1.0 Combobox Without Autocomplete</h1>
+  <h1>Example of Legacy ARIA 1.0 Combobox With Inline Autocomplete</h1>
   <p>
     <strong>NOTE:</strong> This page is work in progress; it is not ready for review.
     This work is tracked by <a href="https://github.com/w3c/aria-practices/issues/99">issue 99</a>.
@@ -56,7 +56,7 @@
         <div class="group">
           <input id="cb1-input" class="cb_edit" type="text"
                  role="combobox"
-                 aria-autocomplete="none"
+                 aria-autocomplete="inline"
                  aria-expanded="flase"
                  aria-haspopup="true"
                  aria-owns="cb1-listbox"
