--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
@@ -15,7 +15,7 @@
 <link href="css/combobox-1.0.css" rel="stylesheet">
 <link  href="css/listbox.css"     rel="stylesheet">
 
-<script src="js/combobox-1.0.js"  type="text/javascript"></script>
+<script src="js/combobox-1.0-listbox.js"  type="text/javascript"></script>
 <script src="js/listbox.js"       type="text/javascript"></script>
 <script src="js/listboxOption.js" type="text/javascript"></script>
 
@@ -36,7 +36,7 @@
   </p>
   <p>Similar examples include: </p>
   <ul>
-    <li><a href="combobox-autocomplete-none.html">Combobox Without Autocomplete</a>: summarize what this related example demonstrates.</li>
+    <li><a href="combobox-autocomplete-inline.html">Combobox With Inline Autocomplete</a>: summarize what this related example demonstrates.</li>
     <li><a href="combobox-autocomplete-both.html">Combobox With Both List and Inline Autocompletion</a>: summarize what this related example demonstrates.</li>
   </ul>
 
@@ -44,7 +44,7 @@
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
-      <div class="combobox10">
+      <div class="combobox-listbox">
         <label for="cb1-input">State</label>
 
         <div class="group">
@@ -167,60 +167,60 @@
         </tr>
       </thead>
       <tbody>
-            <tr>
-              <th><kbd>Enter</kbd></th>
-              <td>
-                <ul>
-                  <li>Textbox value is set to the option content.</li>
-                  <li>Closes the listbox.</li>
-                  <li>Sets focus on the textbox</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <th><kbd>Escape</kbd></th>
-              <td>
-                <ul>
-                  <li>Closes the listbox.</li>
-                  <li>Sets focus to the textbox button.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <th><kbd>Up Arrow</kbd></th>
-              <td>
-                <ul>
-                  <li>Moves focus to the previous option.</li>
-                  <li>If focus is on the first option, the focus does not move.</li>
-                </ul>
-              </td>
-            </tr>
-             <tr>
-              <th><kbd>Down Arrow</kbd></th>
-              <td>
-                <ul>
-                  <li>Moves focus to the next option.</li>
-                  <li>If focus is on the last option, the focus does not move.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <th><kbd>Home</kbd></th>
-              <td>Moves focus to the first option.</td>
-            </tr>
-            <tr>
-              <th><kbd>End</kbd></th>
-              <td>Moves focus to the last option.</td>
-            </tr>
-            <tr>
-              <th><kbd>A-Z</kbd><br><kbd>a-z</kbd></th>
-              <td>
-                <ul>
-                  <li>Moves focus to the option with a label that starts with the typed character if such an option exists.</li>
-                  <li>Otherwise, focus does not move.</li>
-                </ul>
-              </td>
-            </tr>
+        <tr>
+          <th><kbd>Enter</kbd></th>
+          <td>
+            <ul>
+              <li><code>input[type="text"]</code> value is set to the <code>option</code> content.</li>
+              <li>Closes the <code>listbox</code>.</li>
+              <li>Sets focus on the <code>input[type="text"]</code></li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th><kbd>Escape</kbd></th>
+          <td>
+            <ul>
+              <li>Closes the <code>listbox</code>.</li>
+              <li>Sets focus to the <code>input[type="text"]</code> button.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th><kbd>Up Arrow</kbd></th>
+          <td>
+            <ul>
+              <li>Moves focus to the previous <code>option</code>.</li>
+              <li>If focus is on the first <code>option</code>, the focus does not move.</li>
+            </ul>
+          </td>
+        </tr>
+         <tr>
+          <th><kbd>Down Arrow</kbd></th>
+          <td>
+            <ul>
+              <li>Moves focus to the next <code>option</code>.</li>
+              <li>If focus is on the last <code>option</code>, the focus does not move.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th><kbd>Home</kbd><br/><kbd>Page Up</kbd></th>
+          <td>Moves focus to the first <code>option</code>.</td>
+        </tr>
+        <tr>
+          <th><kbd>End</kbd><br/><kbd>Page Down</kbd></th>
+          <td>Moves focus to the last <code>option</code>.</td>
+        </tr>
+        <tr>
+          <th><kbd>A-Z</kbd><br><kbd>a-z</kbd></th>
+          <td>
+            <ul>
+              <li>Moves focus to the <code>option</code> with a label that starts with the typed character if such an option exists.</li>
+              <li>Otherwise, focus does not move.</li>
+            </ul>
+          </td>
+        </tr>
       </tbody>
     </table>
 
@@ -400,7 +400,7 @@
       </li>
       <li>
         Javascript:
-        <a href="js/combobox-1.0.js" type="text/javascript">combobox-1.0.js</a>
+        <a href="js/combobox-1.0-listbox.js" type="text/javascript">combobox-1.0-listbox.js</a>
       </li>
       <li>
         Javascript:
