typo - hautomatically to automatically

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -654,7 +654,7 @@
         <ul>
           <li><kbd>Down Arrow</kbd>: If the popup is available, moves focus into the popup: 
             <ul>
-              <li>If the autocomplete behavior hautomatically selected a suggestion before <kbd>Down Arrow</kbd> was pressed, focus is placed on the suggestion following the automatically selected suggestion.</li>
+              <li>If the autocomplete behavior automatically selected a suggestion before <kbd>Down Arrow</kbd> was pressed, focus is placed on the suggestion following the automatically selected suggestion.</li>
               <li>Otherwise, places focus on the first focusable element in the popup.</li>
             </ul>
           </li>
